--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -37,8 +37,10 @@ main {
   @extend .container;
   background-color: #eee;
   padding-bottom: 80px;
+  padding-left: 80px;
   width: 100%;
   margin-top: 51px; // accommodate the navbar
+
   }
 section {
   @extend .row;
