--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,2 +1,5 @@
 <%# add navigation links to this file %>
 <li><%= link_to 'About', page_path('about') %></li>
+<li><%= link_to 'Skankometer', page_path('page1') %></li>
+<li><%= link_to 'Page2', page_path('page2') %></li>
+<li><%= link_to 'Contacto', page_path('contacto') %></li>
