--- a/app/views/pages/page1.html.erb
+++ b/app/views/pages/page1.html.erb
@@ -3,7 +3,6 @@
   <h1>Welcome to the Skankometer<small> Please select a category</small></h1>
 </div>
 
-
 <div class="dropdown">
   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
     I am a...
@@ -18,6 +17,113 @@
     <li><a href="#">General Skank</a></li>
   </ul>
 </div>
+
+<br>
+
+<form class="form-inline">
+  <div class="form-group">
+    <label for="exampleInputName2">Name</label>
+    <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail2">Email</label>
+    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+  </div>
+  <button type="submit" class="btn btn-default">Send invitation</button>
+</form>
+
+<br>
+
+<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+
+  <div class="form-group">
+    <label for="exampleInputPassword1">Cual es tu motivo principal para acudir a la terapia nutricional?</label>
+  <input type="text" class="form-control" placeholder="ej. Narsicismo">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Como te has enterado de la terapia nutricional?</label>
+  <input type="text" class="form-control" placeholder="Text input">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Has acudido a otro especialista por las síntomas actuales?</label>
+  <input type="text" class="form-control" placeholder="Text input">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Sigues alguna dieta específica en la actualidad?</label>
+  <input type="text" class="form-control" placeholder="Text input">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Tienes alguna alergia o intoleranica?</label>
+  <input type="text" class="form-control" placeholder="Text input">
+  </div>
+
+
+  <div class="form-group">
+    <label for="exampleInputPassword1">Why I hate myself (min 2000 words)</label>
+  <input type="text" class="form-control" placeholder="Hint: because you are a FUCKING WHORE!">
+  </div>
+
+  <div class="form-group">
+    <label for="exampleInputFile">File input</label>
+    <input type="file" id="exampleInputFile">
+    <p class="help-block">Example block-level help text here.</p>
+  </div>
+
+  <div class="checkbox">
+    <label>
+      <input type="checkbox"> I am pure and chaste virgin
+      <br>
+      <input type="checkbox"> I am a worthless whore
+    </label>
+  </div>
+
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+
+<br><br>
+How many books have you read in your life?
+<label class="checkbox-inline">
+  <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
+</label>
+<label class="checkbox-inline">
+  <input type="checkbox" id="inlineCheckbox2" value="option2"> 2
+</label>
+<label class="checkbox-inline">
+  <input type="checkbox" id="inlineCheckbox3" value="option3"> 3
+</label>
+
+<br><br>
+Number of times a day i stuff my fat pie hole with junk food:
+<label class="radio-inline">
+  <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
+</label>
+<label class="radio-inline">
+  <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
+</label>
+<label class="radio-inline">
+  <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 3
+</label>
+
+<br><br>
+
+Number of sexual partners:
+<select class="form-control">
+  <option>0 (I am richeous and chaste)</option>
+  <option>1 (I am a whore)</option>
+  <option>2 </option>
+  <option>3 </option>
+  <option>4 </option>
+  <option>5+ and I am a disgrace to humanity</option>
+</select>
+
 <br>
 Your Skank Rating (S.R) is
 <br>
