--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -29,6 +29,8 @@
   loads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text here
   loads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text here
 <br><br>
+<%= image_tag "img2.jpg", class:"img-circle", size:"500", alt:"swimming pool" %>
+<br><br>
 
   loads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text here
   loads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text hereloads of randowm text here
