add prototype questionnaire

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -3,3 +3,4 @@
 <li><%= link_to 'Skankometer', page_path('page1') %></li>
 <li><%= link_to 'Page2', page_path('page2') %></li>
 <li><%= link_to 'Contacto', page_path('contacto') %></li>
+<li><%= link_to 'Questionnaire', questionnaire_path('new') %></li>
