--- a/app/views/formularios/show.html.erb
+++ b/app/views/formularios/show.html.erb
@@ -1,17 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<p>
+<h1>
   <strong>Nombre:</strong>
   <%= @formulario.nombre %>
-</p>
+</h1>
 
+<h3>Datos Personales</h3>
 <p>
   <strong>Fecha:</strong>
   <%= @formulario.fecha %>
 </p>
 
 <p>
-  <strong>Fdn:</strong>
+  <strong>Fecha de nacimiento:</strong>
   <%= @formulario.FdN %>
 </p>
 
@@ -60,6 +61,7 @@
   <%= @formulario.motivos %>
 </p>
 
+HISTORIA MÉDICA
 <p>
   <strong>Especialistas:</strong>
   <%= @formulario.especialistas %>
